TEST_PROGRAMS/INVALID/alexandre_st-louis_fortier/026-if-expression.min
print 1 + if 0 then 2 else 100 endif;

